--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="tw">
 <head>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equ="X-UA-Compatible" 
+          content="ie=edge">
+    <title>Personal Website</title>
+    <link rel="stylesheet" href="/assets/css/custom.css">
+  
   <style type='text/css'>
     .box{
       background-color: aliceblue;
