--- a/index.html
+++ b/index.html
@@ -6,18 +6,8 @@
     <meta http-equ="X-UA-Compatible" 
           content="ie=edge">
     <title>Personal Website</title>
-    <link rel="stylesheet" href="/assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
   
-  <style type='text/css'>
-    .box{
-      background-color: aliceblue;
-      width: 50px;
-      height: 50px;
-      z-index: 100;
-      display: inline-block;
-      margin: 10px;
-    }
-  </style>
 </head>
 <body>
   <div class='box'></div>
