--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         el: "#main",
         data: {
           DT: [{
-            Id,
-            text,
+            Id:0,
+            text:'',
           }]
         },
         created: function () {
