--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           },          
           NewItem: function(Id,text){
             var item = {
-              Id = Id;
-              text = text;
+              Id = Id,
+              text = text
             };            
             return item;
           }
