--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
               this.DT[i] = this.NewItem(i+1,'one');
             }            
           },          
-          NewItem: function(Id,text){
+          NewItem: function(newId,text){
             var item = {
-              'Id' = Id,
+              'Id' = newId,
               'text' = text
             };            
             return item;
