--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               this.DT[i] = this.NewItem(i+1,'one');
             }            
           },          
-          NewItem: function(newId,text){
+          NewItem: function(Id,text){
             var item = {
-              'Id' = newId,
-              'text' = text
+              Id: newId,
+              text: text
             };            
             return item;
           }
