--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input type='number' value='' name='number'  />
       <input type='button' value='Go'  />
     </div>
-    <div class='box' :for='item in DT' >
+    <div class='box' v-for='item in DT' >
       <p>{{item.Id}}</p>
     </div>
   </div>
