--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           }]
         },
         created: function () {
-          this.init(num);
+          this.init(this.num);
         },
         methods: {
           init: function(e) {
