--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input type='number' :value='num'  name='number'  />
       <input type='button' value='Go' @click='init(num);'  />
     </div>
-    <div class='box' v-for='item in DT' >
+    <div class='box' v-for='item in DT' :key="item.Id" >
       <p>{{item.Id}}</p>
     </div>
   </div>
