--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   
   <div id='main'>
     <div>
-      <input type='number' :value='num'  name='number'  />
-      <input type='button' value='Go' @click='init'  />
+      <input type='number' v-model='num'  name='number'  />
+      <input type='button' value='Go' @click='Change()'  />
     </div>
     <div class='box' v-for='item in DT' :key="item.Id" >
       <p>{{item.Id}}</p>
