--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="assets/css/custom.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  
+    <script type='text/javascript' src='assets/js/app.js'></script>
 </head>
 <body>
   
@@ -30,64 +30,6 @@
       <div class='bgcontainer'></div>
     </section>
   </div>
-  <script type='text/javascript'>
-    var Main = new Vue({
-        el: "#main",
-        data: {
-          num:2,
-          nowDTlength:2,
-          DT: [{
-            Id:0,
-            text:'',
-          }]
-        },
-        created: function () {
-          this.init();
-        },
-        methods: {
-          init: function() {
-            var v = this;
-            for(i=0;i<v.num;i++){
-              this.DT[i] = this.NewItem(i+1,'one');
-            }            
-          },
-          Add: function(){
-            var v = this;
-            var nowlength = v.DT.length;
-            v.DT.push(v.NewItem( nowlength +1 ,'two'));
-            v.num = v.DT.length;
-          },          
-          Minus: function(){
-            var v = this;
-            v.DT.pop();
-            v.num = v.DT.length;
-          },
-          Change: function(){
-            var v = this;
-            var tDTL= v.DT.length;
-            var tnum= v.num;
-            
-            console.log('change :' + tDTL + ' to ' + tnum);
-            
-            if(tnum > tDTL){
-              for(i=0;i< (tnum - tDTL);i++){
-                v.Add();
-              }   
-            }else{
-              for(i=0;i< (tDTL - tnum);i++){
-                v.Minus();
-              }
-            }            
-          },
-          NewItem: function(Id,text){
-            var newitem = {
-              Id: Id,
-              text: text
-            };            
-            return newitem;
-          }
-        }
-      });
-  </script>
+  
 </body>
 </html>
