--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
           content="ie=edge">
     <title>Personal Website</title>
     <link rel="stylesheet" href="assets/css/custom.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     
 </head>
