--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <section id='BBbox'>
       <div class='BB' v-for='(item, index) in BBDT'></div>
     </section>
+    <section id='mwbox'>
+      <p>我的文字</p>
+    </section> 
   </div>
   <!--FS S-->
   <script type='text/javascript' src='assets/js/app.js'></script>
