--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <script>
       //screen.orientation.lock();   // webkit only
       //screen.lockOrientation("orientation");
       //document.body.requestFullscreen();
-      alert(screen.orientation.type);
-      screen.orientation.lock("landscape");
+      console.log(screen.orientation.type);
+      //screen.orientation.lock("landscape");
       screen.lockOrientationUniversal = screen.lockOrientation || screen.mozLockOrientation || screen.msLockOrientation;
 
     </script>
