--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   
-    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
+    
     <script>
       //screen.orientation.lock();   // webkit only
       //screen.lockOrientation("orientation");
       //document.body.requestFullscreen();
-      console.log(screen.orientation.type);
+      //console.log(screen.orientation.type);
       //screen.orientation.lock("landscape");
-      screen.lockOrientationUniversal = screen.lockOrientation || screen.mozLockOrientation || screen.msLockOrientation;
+      //screen.lockOrientationUniversal = screen.lockOrientation || screen.mozLockOrientation || screen.msLockOrientation;
 
     </script>
 </head>
