--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,90 @@
 <html>
-  <head>
-  </head>
+ <head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<title></title>
+		<link rel="preconnect" href="https://www.ssm.gov.mo/">
+
+
+
+
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="mobile-web-app-status-bar-style" content="black">
+
+
+
+		<meta name="copyright" content="2020 Serviços de Saúde de Macau Inc.">
+		<meta name="author" content="Serviços de Saúde de Macau">
+
+		<meta name="keywords" content="澳門，衛生局，澳門衛生局,澳門特別行政區政府, Macao, Macau, Serviços de Saúde, Serviços de Saúde do Governo da Região Administrativa Especial de Macau">
+		<meta name="description" content="">
+
+		<meta name="theme-color" content="#32ad92">
+		<meta name="msapplication-navbutton-color" content="#32ad92">
+
+
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+		<meta http-equiv="Pragma" content="no-cache">
+		<meta http-equiv="Expires" content="0">
+
+		<meta itemprop="name" content="Serviços de Saúde de Macau">
+		<meta itemprop="image" content="">
+		<meta itemprop="description" content="">
+
+		<meta property="og:title" content="Serviços de Saúde de Macau">
+		<meta property="og:url" content="//www.ssm.gov.mo">
+		<meta property="og:image" content="">
+		<meta property="og:description" content="">
+
+
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+		<link rel="icon" href="https://app.ssm.gov.mo/phd/common/images/ss/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="https://app.ssm.gov.mo/phd/common/images/ss/favicon.ico" type="image/x-icon">
+
+
+		<script src="../js/juicer.min.js"></script>
+		<script src="../js/json.js"></script>
+		<script src="../js/jquery.js"></script>
+		<script src="../js/jquery.s2t.min.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
+		
+		<script src="../js/base64.min.js"></script>
+		<script src="../js/localstorage.min.js"></script>
+		<script src="../js/jquery.maskedinput.min.js"></script>
+		<script src="../js/jquery.texthighlight.js"></script>
+		<script src="../js/jquery.cookie.min.js"></script>
+		
+		<script src="../js/swiper.jquery.min.js"></script>
+		<script src="../js/bootstrap-datepicker.min.js"></script>
+		<script src="../js/bootstrap-datepicker.zh-TW.min.js"></script>
+		<script src="../js/richeditor.min.js"></script>
+		<script src="../js/commonapi.min.js"></script>
+		
+		<script src="../js/common.min.1627225870534.js" type="text/javascript"></script>
+		<script src="../js/ext.min.js" type="text/javascript"></script>
+		<script src="../js/phdform.min.js" type="text/javascript"></script>
+		<script src="../js/apploaded_phd.min.js" type="text/javascript"></script>
+		
+		<script src="../js/aes.js"></script>
+		<script src="../js/my-aes-crypto.2008240934.js"></script>
+		
+		<link rel="stylesheet" href="../css/bootstrap.min.css">
+		<link rel="stylesheet" href="../css/swiper.min.css">
+		<link rel="stylesheet" href="../css/bootstrap-datepicker3.min.css">
+		<link rel="stylesheet" href="../css/richeditor.min.css">
+		<link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css" media="screen">
+		
+		<link rel="stylesheet" href="../css/commons.min.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/sys.icon.min.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/ui.table.min.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/animate.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen">
+		</head>
   <body class="phd-declaraction" bis_status="ok" bis_frame_id="56">
 		<!-- loading -->
 		  <div class="submitWait hidebg hide" style="z-index: 10000;width: 100%;position: absolute;background-color:gray;opacity:0.4;"></div>
