--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
     </section> 
     <section id='forscrollout'>
       <div style="    height: 2000px;    display: block;    background-color: azure;"></div>
-      <h3 data-scroll="in" class="sticky-header">Scroll In</h3>
+     <div class="slick-track" style="opacity: 1; width: 1350px;"><li class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0" role="tabpanel" id="slick-slide10" aria-describedby="slick-slide-control10" style="width: 450px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1;">
+                                <img src="https://via.placeholder.com/450x450/77bbff/ffffff/" alt="ればーのかわり">
+                            </li><li class="slick-slide" data-slick-index="1" aria-hidden="true" tabindex="-1" role="tabpanel" id="slick-slide11" aria-describedby="slick-slide-control11" style="width: 450px; position: relative; left: -450px; top: 0px; z-index: 998; opacity: 0;">
+                                <img src="https://via.placeholder.com/450x450/2211dd/ffffff/" alt="ればーのかわり">
+                            </li><li class="slick-slide" data-slick-index="2" aria-hidden="true" tabindex="-1" role="tabpanel" id="slick-slide12" aria-describedby="slick-slide-control12" style="width: 450px; position: relative; left: -900px; top: 0px; z-index: 998; opacity: 0;">
+                                <img src="https://via.placeholder.com/450x450/ddccdd/ffffff/" alt="ればーのかわり">
+                            </li> <p class="item-txt">
+                            私たちサンナナサロン®︎のベースサプリ。それが「ればーのかわり」です。鉄分や葉酸、ビタミンB12、亜鉛、銅といったビタミンやミネラルをバランスよく豊富に配合しています。鉄分が酸化鉄に変質しないように熱と圧力がかからないこだわりの製法で作られています。
+                            </p></div>
       <div style="    height: 2000px;    display: block;    background-color: azure;"></div>
     </section>     
     
